<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">KJG Garderobe</string>
    <string name="title_activity_add_number">Add Number</string>
    <string name="title_activity_add_bag">Add Bag</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_header_view">View</string>
    <string name="drawer_header_management">Management</string>
    <string name="drawer_header_party">Party</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_item_schedule">Schedule</string>
    <string name="drawer_item_numbers">Numbers</string>
    <string name="drawer_item_bags">Bags</string>
    <string name="drawer_item_newparty">New Party</string>
    <string name="drawer_item_checklist">Checklist</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="hint_txt_party_name">Party name</string>
    <string name="text_btn_party_date">Pick date</string>
    <string name="prompt_sp_shift_count">Select shift amount</string>
    <string name="prompt_sp_add_numbag_reason">Choose reason</string>
    <string name="text_tvw_shift_count">Amount of shifts :</string>
    <string name="text_btn_create_new_party">Create</string>
    <string name="text_btn_new_party_cancel">Cancel</string>
    <string name="text_btn_party_start">Party start</string>
    <string name="text_tvw_shift_length">Shift length :</string>
    <string name="text_tvw_schedule_item_number"><u>Shift %s</u></string>
    <string name="text_tvw_schedule_item_members_header">Members :</string>
    <string name="text_btn_add_numbag_add">Add</string>
    <string name="text_txt_numbag_reason">Reason: %s</string>
    <string name="text_txt_numbag_time">Time: %s</string>
    <string name="text_txt_numbag_comment">Comment: %s</string>
    <string name="text_btn_add_numbag_cancel">Cancel</string>
    <string name="hint_txt_add_numbag_number">Number</string>
    <string name="hint_txt_add_numbag_comment">Comment</string>
    <string name="no_members">No members</string>
    <string name="shift_detail_members">Members</string>
    <string name="shift_detail_numbers">Numbers</string>
    <string name="shift_detail_bags">Bags</string>
    <string name="no_party">No party</string>
    <string name="no_numOrBags">No numbers or bags</string>
    <string name="title_new_party">Create new party</string>
    <string name="action_add_member">Add member</string>
    <string name="toast_party_selected">Selected party %s</string>
    <string name="toast_party_deleted">Deleted party %s</string>
    <string name="action_delete_party">Delete party</string>
    <string name="action_add_number">Add number</string>
    <string name="action_add_bag">Add bag</string>
    <string name="confirm_delete_party">Delete %s?</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_add">Add</string>
    <string name="member_name">Member name</string>
    <string name="undo">Undo</string>
    <string name="undo_all">Undo all</string>
    <string name="undo_message">%s removed</string>
    <string name="reason_found">Found</string>
    <string name="reason_left">Left</string>
    <string name="reason_mistake">Mistake</string>
    <string name="reason_other">Other</string>
    <string name="reason_lost">Lost</string>
    <string name="reason_wrong">Wrong content</string>
    <string name="no_comment">No Comment</string>
    <string name="action_search">Search</string>
    <string name="action_create_party">Create</string>
    <string name="action_cancel_party">Cancel</string>
    <string name="contentDesc_ivw_schedule_item_status">Status</string>
    <string name="contentDesc_ivw_checklist_item_checked">Checked</string>
    <string name="action_add_check_item">Add</string>
    <string name="action_remove_check_item_activated">Delete mode</string>
    <string name="action_remove_check_item_deactivated">Cancel delete mode</string>
    <string name="action_reset_check_items">Reset Entries</string>
    <string name="dialog_add_check_title">New Checklist entry</string>
    <string name="dialog_add_check_hint">What to do ?</string>
    <string name="dummy_content_description">Content</string>
    <string name="empty_list_members">No members</string>
    <string name="empty_list_numbers">No numbers</string>
    <string name="empty_list_bags">No bags</string>
    <string name="empty_list_checklist">Nothing to check</string>
    <string name="pref_locale_cat_title">Localization</string>
    <string name="pref_locale_cat_summary">Localization options</string>
    <string name="pref_language_title">Language</string>
    <string name="pref_language_summary">Interface language</string>
    <string name="pref_notifications_cat_summary">Notification settings</string>
    <string name="pref_notifications_cat_title">Notifications</string>
    <string name="pref_notifications_summary">Enable notifications for shifts</string>
    <string name="pref_notifications_title">Enable notifications</string>
    <string name="pref_notification_vibrate_title">Enable vibration</string>
    <string name="pref_notification_vibration_summary">Enable vibration for notifications</string>
    <string name="pref_notification_sound_title">Enable sound</string>
    <string name="pref_notification_sound_summary">Enable sound for notifications</string>
    <string name="pref_notification_sound_uri_title">Notification sound</string>
    <string name="pref_notification_sound_uri_summary">Select sound for notifications</string>
    <string name="notification_title">Shift %s</string>
    <string name="restarting">Restarting&#8230;</string>
    <string name="notification_action_number">Number</string>
    <string name="notification_action_bag">Bag</string>

    <string-array name="pref_entries_language">
        <item>System default</item>
        <item>English</item>
        <item>German</item>
    </string-array>
    <string-array name="pref_values_language">
        <item>DEFAULT</item>
        <item>en</item>
        <item>de</item>
    </string-array>
    <string-array name="entries_sp_shift_count">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string-array name="entries_sp_shift_length">
        <item>2 hours</item>
        <item>1 hour</item>
        <item>30 minutes</item>
    </string-array>
    <string-array name="reasons_number">
        <item>@string/reason_found</item>
        <item>@string/reason_left</item>
        <item>@string/reason_mistake</item>
        <item>@string/reason_other</item>
    </string-array>
    <string-array name="reasons_bag">
        <item>@string/reason_lost</item>
        <item>@string/reason_left</item>
        <item>@string/reason_wrong</item>
        <item>@string/reason_mistake</item>
        <item>@string/reason_other</item>
    </string-array>

    <string name="title_activity_checklist">Checklist</string>
    <string name="title_activity_new_party">New Party</string>

</resources>