<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:summary="@string/pref_locale_cat_summary"
        android:title="@string/pref_locale_cat_title" >
        <ListPreference
            android:entries="@array/pref_entries_language"
            android:entryValues="@array/pref_values_language"
            android:key="locale"
            android:summary="@string/pref_language_summary"
            android:title="@string/pref_language_title" />
    </PreferenceCategory>
    <PreferenceCategory
        android:summary="@string/pref_notifications_cat_summary"
        android:title="@string/pref_notifications_cat_title" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="enable_notifications"
            android:summary="@string/pref_notifications_summary"
            android:title="@string/pref_notifications_title" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="enable_notification_vibration"
            android:summary="@string/pref_notifications_summary"
            android:title="@string/pref_notifications_title" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="enable_notification_sound"
            android:summary="@string/pref_notification_sound_summary"
            android:title="@string/pref_notification_sound_title" />

        <RingtonePreference
            android:key="notification_sound"
            android:ringtoneType="notification"
            android:showDefault="true"
            android:showSilent="false"
            android:summary="@string/pref_notification_sound_uri_summary"
            android:title="@string/pref_notification_sound_uri_title" >
        </RingtonePreference>
    </PreferenceCategory>

</PreferenceScreen>