<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/txt_add_numbag_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="@string/hint_txt_add_numbag_number"
        android:inputType="numberSigned"
        android:singleLine="true"
        android:textSize="25sp" />

    <Spinner
        android:id="@+id/sp_add_numbag_reason"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:entries="@array/reasons_number"
        android:prompt="@string/prompt_sp_add_numbag_reason"
        android:spinnerMode="dialog" />

    <Button
        android:id="@+id/btn_add_numbag_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@android:drawable/btn_dropdown" />

    <EditText
        android:id="@+id/txt_add_numbag_comment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:hint="@string/hint_txt_add_numbag_comment"
        android:inputType="textMultiLine" />

    <LinearLayout
        style="android:attr/buttonBarStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_add_numbag_cancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_btn_add_numbag_cancel" />

        <Button
            android:id="@+id/btn_add_numbag_add"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_btn_add_numbag_add" />
    </LinearLayout>

</LinearLayout>